--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.2.0",
-    "express-ejs-layouts": "^2.5.1"
+    "express-ejs-layouts": "^2.5.1",
+    "knex": "^3.1.0",
+    "pg": "^8.11.3",
+    "express-session": "^1.17.3",
+    "connect-flash": "^0.1.1",
+    "bcrypt": "^5.1.1",
+    "helmet": "^7.1.0"
   }
 }
