Get ready for eb deployment

--- a/.env
+++ b/.env
@@ -5,3 +5,12 @@ DB_PASSWORD=Dawson2023!
 DB_NAME=ella_rises
 SESSION_SECRET=19384yjhfesas4||super_secret_session_key
 PORT=3015
+
+# terminal command for RDS connection:
+# psql -h awseb-e-v3wwajxjy2-stack-awsebrdsdatabase-cdl4bryhrpg3.c4raiiwyiy3q.us-east-1.rds.amazonaws.com -U postgres -d ebdb
+
+# password:
+# byubluebanana
+
+# sql dump command:
+# psql -h awseb-e-v3wwajxjy2-stack-awsebrdsdatabase-cdl4bryhrpg3.c4raiiwyiy3q.us-east-1.rds.amazonaws.com -U postgres -d ebdb -p 5432 -f local_db_dump.sql
